Minor code style fixes - Remove unused import - Replace deprecated method `newInstance()` - Don't initialize `toArray()` with a size - Remove `protected` in final class - `Objects::equals` in favor of `::equals`